manifest/objects/rh2__PS_Filter_Audit_History__c.object
<CustomObject>
    <description>Tracks individual field history on HS Filter</description>
    <fields>
        <fullName>rh2__Field__c</fullName>
        <description>The field being updated</description>
        <inlineHelpText>The field being updated</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Filter_Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>rh2__PS_Filter_Audit__c</referenceTo>
        <relationshipLabel>Filter Audit History</relationshipLabel>
        <relationshipName>PS_Filter_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__New_Value__c</fullName>
        <description>The new value of the updated field</description>
        <inlineHelpText>The new value of the updated field</inlineHelpText>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Old_Value__c</fullName>
        <description>The old value of the updated field</description>
        <inlineHelpText>The old value of the updated field</inlineHelpText>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Filter Audit History</label>
    <nameField>
        <label>Filter Audit History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Audit Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>